# clCahnHilliard

./: CMakeLists.txt  CahnHilliard.r  Computing_Kernel.cl  LICENSE  Main_Program.cpp  PlotCahnHilliard.r  README.md  Settings_and_Parameters.h
